--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-pandas
-transformers
-jupyter
-ipykernel
-numpy
-torch
-pyabsa
-NewsSentiment
-python-dotenv
-seaborn
-matplotlib
-flair
-autorootcwd
-chromadb
-spacy-sentiws
-libretranslate
-xgboost
-fuzzywuzzy
-tensorflow
+autorootcwd==1.0.0
+chromadb==0.4.24
+flair==0.13.1
+fuzzywuzzy==0.18.0
+ipykernel==6.29.3
+jupyter==1.0.0
+libretranslate==1.5.6
+matplotlib==3.8.3
+NewsSentiment==1.2.28
+numpy==1.26.4
+pandas==2.2.1
+pyabsa==2.4.1.post1
+python-dotenv==1.0.1
+seaborn==0.13.2
+spacy-sentiws==3.0.0
+tensorflow==2.16.1
+torch==2.0.1
+transformers==4.24.0
+xgboost==2.0.3
